kubernetes/apps/main/rustdesk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustdesk
  namespace: rustdesk
  annotations:
    lbipam.cilium.io/ips: "10.69.65.26"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: rustdesk
  ports:
    - name: nat
      port: 21115
      protocol: TCP
      targetPort: nat
    - name: rendezvous
      port: 21116
      protocol: TCP
      targetPort: rendezvous
    - name: rendezvous-udp
      port: 21116
      protocol: UDP
      targetPort: rendezvous-udp
    - name: relay
      port: 21117
      protocol: TCP
      targetPort: relay
